--- a/Employees/webapp/view/MainView.view.xml
+++ b/Employees/webapp/view/MainView.view.xml
@@ -1,10 +1,30 @@
-<mvc:View controllerName="logaligroup.Employees.controller.MainView" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
+<mvc:View controllerName="logaligroup.Employees.controller.MainView" 
+          xmlns:mvc="sap.ui.core.mvc" 
+          displayBlock="true" 
+          xmlns="sap.m"
+          xmlns:core="sap.ui.core">
 	<Shell id="shell">
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
 					<content>
-                      <Text text="Hello World"></Text>
+                      <HBox>
+                        <Label id="labelEmployee" labelFor="inputEmployee" text="{i18n>labelEmployee}" class="sapUiSmallMargin"/>
+                        <Input id="inputEmployee" 
+                               maxLength="6" 
+                               width="200px" 
+                               class="sapUiSmallMarginEnd"
+                               liveChange="onValidate"/>
+                        <Label id="labelCountry" labelFor="slCountry" text="{i18n>labelCountry}" class="sapUiSmallMargin" visible="false"/>
+                        <Select id="slCountry" forceSelection="true" visible="false">
+                          <items>
+                            <core:Item key="US" text="{i18n>CountryUS}"/>
+                            <core:Item key="US" text="{i18n>CountryUK}"/>
+                            <core:Item key="US" text="{i18n>CountryCO}"/>
+                            <core:Item key="US" text="{i18n>CountryES}"/>
+                          </items>
+                        </Select>
+                      </HBox>
                     </content>
 				</Page>
 			</pages>
